update to front end and backend to interact with marvel api

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,20 @@
-//
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+
+// Dashboard
+@import './components/dashboard';
+
+// comic details
+@import './components/comic-details';
+
+// item actions
+@import './components/item-actions';
+
+// comic
+@import './components/comic';
